CustomObjects/objects/invoiceit_s__Sequence_Number__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use this object to configure the legal entity - this is quite handy to manage invoicing from multiple companies on the same org.</description>
    <fields>
        <fullName>invoiceit_s__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Next_Number__c</fullName>
        <label>Invoice Next Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Prefix__c</fullName>
        <label>Invoice Prefix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Suffix__c</fullName>
        <label>Invoice Suffix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Street_Name__c</fullName>
        <label>Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Zip_Postal_Code__c</fullName>
        <label>Zip Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Legal Entity</label>
</CustomObject>